RESOLVED FIXED73461
fix raw bitmap access bug
https://bugs.webkit.org/show_bug.cgi?id=73461
Summary fix raw bitmap access bug
Robin Dunn
Reported 2011-11-30 10:06:55 PST
Created attachment 117208 [details] raw bitmap access patch Add a scope for the raw bitmap access so that wx will not make a copy when creating the wxMemoryDC.
Attachments
raw bitmap access patch (2.10 KB, patch)
2011-11-30 10:06 PST, Robin Dunn
kevino: review+
kevino: commit-queue-
Kevin Ollivier
Comment 1 2011-11-30 11:25:49 PST
Landed in r101535, thanks!
Note You need to log in before you can comment on or make changes to this bug.