[wx] Add a scope for the raw bitmap access so that wx will not make a copy when creating the wxMemoryDC. https://bugs.webkit.org/show_bug.cgi?id=73461

Reviewed By Kevin Ollivier.


Canonical link: https://commits.webkit.org/90016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101535 268f45cc-cd09-0410-ab3c-d52691b4dbfc